1.34/05-postgresql/manifests/postgreesql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres-port
    targetPort: postgres-port
  clusterIP: None
  selector:
    app: postgres
    version: "16.2"
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-np
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres-port
    targetPort: postgres-port
    nodePort: 32543
  type: NodePort
  selector:
    app: postgres
    version: "16.2"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: &app postgres 
spec:
  selector:
    matchLabels:
      app: *app
      version: &version "16.2"
  serviceName: postgres-headless
  replicas: 1 
  minReadySeconds: 10 
  
  template:
    metadata:
      labels:
        app: *app
        version: *version
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: postgres
          image: postgres:16.2
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              name: postgres-port
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresdata
          resources:
            requests:
              cpu: "0.4"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1024Mi"
  volumeClaimTemplates:
  - metadata:
      name: postgresdata
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "managed-nfs-storage"
      resources:
        requests:
          storage: 10Gi 
---
kind: Service
apiVersion: v1
metadata:
  name: pgadmin-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
  selector:
    app: pgadmin
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:9.11
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        resources:
          requests:
            memory: "100Mi"
            cpu: "0.2"
          limits:
            memory: "800Mi"
            cpu: "0.8"
        volumeMounts:
          - mountPath: /var/lib/pgadmin
            name: state
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: pgadmin-pvc
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      sectionName: http
    - name: eg
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "pg.kryukov.local"
  rules:
    - backendRefs:
        - kind: Service
          name: pgadmin-svc
          # namespace: sample
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
